--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,10 +26,10 @@ dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 excludes=
-file.reference.gson-2.13.2.jar=..\\..\\MarcoWeb\\Descargas\\gson-2.13.2.jar
-file.reference.jakarta.servlet.jsp-api-3.0.0.jar=..\\..\\librerias par Labdent\\jakarta.servlet.jsp-api-3.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-3.0.0.jar=..\\..\\librerias par Labdent\\jakarta.servlet.jsp.jstl-3.0.0.jar
-file.reference.mysql-connector-j-9.3.0.jar=C:\\Users\\jarar\\Downloads\\MarcoWeb\\Descargas\\mysql-connector-j-9.3.0\\mysql-connector-j-9.3.0.jar
+file.reference.gson-2.13.2.jar=../../MarcoWeb/Descargas/gson-2.13.2.jar
+file.reference.jakarta.servlet.jsp-api-3.0.0.jar=../../librerias par Labdent/jakarta.servlet.jsp-api-3.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-3.0.0.jar=../../librerias par Labdent/jakarta.servlet.jsp.jstl-3.0.0.jar
+file.reference.mysql-connector-j-9.3.0.jar=../../MarcoWeb/Descargas/mysql-connector-j-9.3.0/mysql-connector-j-9.3.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
