Mejora en la interfaz del administrador

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,10 +26,33 @@ dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 excludes=
+file.reference.apiguardian-api-1.1.2.jar=..\\..\\librerias par Labdent\\apiguardian-api-1.1.2.jar
+file.reference.commons-collections4-4.4.jar=..\\..\\librerias par Labdent\\commons-collections4-4.4.jar
+file.reference.commons-compress-1.28.0.jar=..\\..\\librerias par Labdent\\Oficial\\commons-compress-1.28.0.jar
+file.reference.commons-fileupload-1.6.0.jar=..\\..\\librerias par Labdent\\commons-fileupload-1.6.0.jar
+file.reference.commons-io-2.20.0.jar=..\\..\\librerias par Labdent\\commons-io-2.20.0.jar
+file.reference.commons-lang3-3.19.0.jar=..\\..\\librerias par Labdent\\commons-lang3-3.19.0.jar
+file.reference.curvesapi-1.08.jar=..\\..\\librerias par Labdent\\Oficial\\curvesapi-1.08.jar
 file.reference.gson-2.13.2.jar=../../MarcoWeb/Descargas/gson-2.13.2.jar
+file.reference.guava-33.5.0-jre.jar=..\\..\\librerias par Labdent\\Oficial\\guava-33.5.0-jre.jar
+file.reference.itextpdf-5.5.13.3.jar=..\\..\\librerias par Labdent\\Oficial\\itextpdf-5.5.13.3.jar
 file.reference.jakarta.servlet.jsp-api-3.0.0.jar=../../librerias par Labdent/jakarta.servlet.jsp-api-3.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-3.0.0.jar=../../librerias par Labdent/jakarta.servlet.jsp.jstl-3.0.0.jar
+file.reference.junit-jupiter-api-6.0.0.jar=..\\..\\librerias par Labdent\\junit-jupiter-api-6.0.0.jar
+file.reference.junit-jupiter-engine-6.0.0.jar=..\\..\\librerias par Labdent\\junit-jupiter-engine-6.0.0.jar
+file.reference.log4j-api-2.20.0.jar=..\\..\\librerias par Labdent\\Oficial\\log4j-api-2.20.0.jar
+file.reference.log4j-core-2.20.0.jar=..\\..\\librerias par Labdent\\Oficial\\log4j-core-2.20.0.jar
+file.reference.mockito-core-5.20.0.jar=..\\..\\librerias par Labdent\\mockito-core-5.20.0.jar
+file.reference.mockito-junit-jupiter-5.20.0.jar=..\\..\\librerias par Labdent\\mockito-junit-jupiter-5.20.0.jar
 file.reference.mysql-connector-j-9.3.0.jar=../../MarcoWeb/Descargas/mysql-connector-j-9.3.0/mysql-connector-j-9.3.0.jar
+file.reference.org.apache.commons.fileupload-1.5.JAKARTA-LIFERAY-PATCHED-1.jar=..\\..\\librerias par Labdent\\org.apache.commons.fileupload-1.5.JAKARTA-LIFERAY-PATCHED-1.jar
+file.reference.poi-5.4.1.jar=..\\..\\librerias par Labdent\\Oficial\\poi-5.4.1.jar
+file.reference.poi-ooxml-5.4.1.jar=..\\..\\librerias par Labdent\\Oficial\\poi-ooxml-5.4.1.jar
+file.reference.poi-ooxml-full-5.4.1.jar=..\\..\\librerias par Labdent\\Oficial\\poi-ooxml-full-5.4.1.jar
+file.reference.poi-scratchpad-5.4.1.jar=..\\..\\librerias par Labdent\\Oficial\\poi-scratchpad-5.4.1.jar
+file.reference.slf4j-api-2.0.9.jar=..\\..\\librerias par Labdent\\slf4j-api-2.0.9.jar
+file.reference.xmlbeans-5.3.0.jar=..\\..\\librerias par Labdent\\Oficial\\xmlbeans-5.3.0.jar
+file.reference.xmlworker-5.5.13.3.jar=..\\..\\librerias par Labdent\\Oficial\\xmlworker-5.5.13.3.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -42,7 +65,30 @@ javac.classpath=\
     ${file.reference.mysql-connector-j-9.3.0.jar}:\
     ${file.reference.gson-2.13.2.jar}:\
     ${file.reference.jakarta.servlet.jsp-api-3.0.0.jar}:\
-    ${file.reference.jakarta.servlet.jsp.jstl-3.0.0.jar}
+    ${file.reference.jakarta.servlet.jsp.jstl-3.0.0.jar}:\
+    ${file.reference.junit-jupiter-api-6.0.0.jar}:\
+    ${file.reference.junit-jupiter-engine-6.0.0.jar}:\
+    ${file.reference.slf4j-api-2.0.9.jar}:\
+    ${file.reference.commons-lang3-3.19.0.jar}:\
+    ${file.reference.guava-33.5.0-jre.jar}:\
+    ${file.reference.poi-scratchpad-5.4.1.jar}:\
+    ${file.reference.commons-io-2.20.0.jar}:\
+    ${file.reference.mockito-core-5.20.0.jar}:\
+    ${file.reference.mockito-junit-jupiter-5.20.0.jar}:\
+    ${file.reference.org.apache.commons.fileupload-1.5.JAKARTA-LIFERAY-PATCHED-1.jar}:\
+    ${file.reference.apiguardian-api-1.1.2.jar}:\
+    ${file.reference.commons-fileupload-1.6.0.jar}:\
+    ${file.reference.poi-5.4.1.jar}:\
+    ${file.reference.itextpdf-5.5.13.3.jar}:\
+    ${file.reference.poi-ooxml-full-5.4.1.jar}:\
+    ${file.reference.xmlworker-5.5.13.3.jar}:\
+    ${file.reference.poi-ooxml-5.4.1.jar}:\
+    ${file.reference.commons-collections4-4.4.jar}:\
+    ${file.reference.xmlbeans-5.3.0.jar}:\
+    ${file.reference.commons-compress-1.28.0.jar}:\
+    ${file.reference.curvesapi-1.08.jar}:\
+    ${file.reference.log4j-api-2.20.0.jar}:\
+    ${file.reference.log4j-core-2.20.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
