--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,11 +33,19 @@ file.reference.commons-fileupload-1.6.0.jar=..\\..\\librerias par Labdent\\commo
 file.reference.commons-io-2.20.0.jar=..\\..\\librerias par Labdent\\commons-io-2.20.0.jar
 file.reference.commons-lang3-3.19.0.jar=..\\..\\librerias par Labdent\\commons-lang3-3.19.0.jar
 file.reference.curvesapi-1.08.jar=..\\..\\librerias par Labdent\\Oficial\\curvesapi-1.08.jar
+file.reference.encoder-1.2.3.jar=..\\..\\encoder-1.2.3.jar
 file.reference.gson-2.13.2.jar=../../MarcoWeb/Descargas/gson-2.13.2.jar
 file.reference.guava-33.5.0-jre.jar=..\\..\\librerias par Labdent\\Oficial\\guava-33.5.0-jre.jar
 file.reference.itextpdf-5.5.13.3.jar=..\\..\\librerias par Labdent\\Oficial\\itextpdf-5.5.13.3.jar
+file.reference.jackson-annotations-2.20.jar=..\\..\\MarcoWeb\\Descargas\\jackson-annotations-2.20.jar
+file.reference.jackson-core-2.20.1.jar=..\\..\\jackson-core-2.20.1.jar
+file.reference.jackson-databind-2.20.1.jar=..\\..\\jackson-databind-2.20.1.jar
 file.reference.jakarta.servlet.jsp-api-3.0.0.jar=../../librerias par Labdent/jakarta.servlet.jsp-api-3.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-3.0.0.jar=../../librerias par Labdent/jakarta.servlet.jsp.jstl-3.0.0.jar
+file.reference.jbcrypt-0.4.jar=..\\..\\MarcoWeb\\Descargas\\jbcrypt-0.4.jar
+file.reference.jjwt-api-0.13.0.jar=..\\..\\librerias par Labdent\\jjwt-api-0.13.0.jar
+file.reference.jjwt-impl-0.13.0.jar=..\\..\\librerias par Labdent\\jjwt-impl-0.13.0.jar
+file.reference.jjwt-jackson-0.13.0.jar=..\\..\\librerias par Labdent\\jjwt-jackson-0.13.0.jar
 file.reference.junit-jupiter-api-6.0.0.jar=..\\..\\librerias par Labdent\\junit-jupiter-api-6.0.0.jar
 file.reference.junit-jupiter-engine-6.0.0.jar=..\\..\\librerias par Labdent\\junit-jupiter-engine-6.0.0.jar
 file.reference.log4j-api-2.20.0.jar=..\\..\\librerias par Labdent\\Oficial\\log4j-api-2.20.0.jar
@@ -51,6 +59,7 @@ file.reference.poi-ooxml-5.4.1.jar=..\\..\\librerias par Labdent\\Oficial\\poi-o
 file.reference.poi-ooxml-full-5.4.1.jar=..\\..\\librerias par Labdent\\Oficial\\poi-ooxml-full-5.4.1.jar
 file.reference.poi-scratchpad-5.4.1.jar=..\\..\\librerias par Labdent\\Oficial\\poi-scratchpad-5.4.1.jar
 file.reference.slf4j-api-2.0.9.jar=..\\..\\librerias par Labdent\\slf4j-api-2.0.9.jar
+file.reference.tika-core-2.9.1.jar=..\\..\\tika-core-2.9.1.jar
 file.reference.xmlbeans-5.3.0.jar=..\\..\\librerias par Labdent\\Oficial\\xmlbeans-5.3.0.jar
 file.reference.xmlworker-5.5.13.3.jar=..\\..\\librerias par Labdent\\Oficial\\xmlworker-5.5.13.3.jar
 includes=**
@@ -88,7 +97,16 @@ javac.classpath=\
     ${file.reference.commons-compress-1.28.0.jar}:\
     ${file.reference.curvesapi-1.08.jar}:\
     ${file.reference.log4j-api-2.20.0.jar}:\
-    ${file.reference.log4j-core-2.20.0.jar}
+    ${file.reference.log4j-core-2.20.0.jar}:\
+    ${file.reference.jbcrypt-0.4.jar}:\
+    ${file.reference.jjwt-api-0.13.0.jar}:\
+    ${file.reference.jjwt-impl-0.13.0.jar}:\
+    ${file.reference.jjwt-jackson-0.13.0.jar}:\
+    ${file.reference.jackson-core-2.20.1.jar}:\
+    ${file.reference.jackson-databind-2.20.1.jar}:\
+    ${file.reference.jackson-annotations-2.20.jar}:\
+    ${file.reference.encoder-1.2.3.jar}:\
+    ${file.reference.tika-core-2.9.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
